[gd_scene load_steps=4 format=3 uid="uid://b2b5f3ejhqp35"]

[ext_resource type="PackedScene" uid="uid://dh0xqsvmtokbh" path="res://scenes/menu/PauseScreen.tscn" id="1_gbg4d"]
[ext_resource type="Script" uid="uid://btrxdnasph4pi" path="res://scripts/menu/game_ui.gd" id="1_p8fv6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_buhkf"]
bg_color = Color(0.470588, 0.741176, 0.282353, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="GameUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_p8fv6")

[node name="PauseMenu" parent="." instance=ExtResource("1_gbg4d")]
layout_mode = 1

[node name="PauseButton" type="Button" parent="."]
top_level = true
z_index = 1
layout_mode = 0
offset_left = 15.0
offset_top = 15.0
offset_right = 55.0
offset_bottom = 56.0
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_buhkf")
theme_override_styles/hover = SubResource("StyleBoxFlat_buhkf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_buhkf")
theme_override_styles/normal = SubResource("StyleBoxFlat_buhkf")
clip_text = true

[node name="ColorRect" type="ColorRect" parent="PauseButton"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 33.0
offset_bottom = 13.0
mouse_filter = 1
mouse_default_cursor_shape = 2

[node name="ColorRect2" type="ColorRect" parent="PauseButton"]
layout_mode = 0
offset_left = 8.0
offset_top = 18.0
offset_right = 33.0
offset_bottom = 23.0
mouse_filter = 1
mouse_default_cursor_shape = 2

[node name="ColorRect3" type="ColorRect" parent="PauseButton"]
layout_mode = 0
offset_left = 8.0
offset_top = 28.0
offset_right = 33.0
offset_bottom = 33.0
mouse_filter = 1
mouse_default_cursor_shape = 2

[connection signal="leave_button_pressed" from="PauseMenu" to="." method="_on_pause_menu_leave_button_pressed"]
[connection signal="resume_button_pressed" from="PauseMenu" to="." method="_on_pause_menu_resume_button_pressed"]
[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
